update popup html with dark mode and added logos

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         }
     ],
     "icons": {
-        "48": "icon.png"
+        "48": "icon48.png"
     },
     "host_permissions": [
         "https://github.com/*"
