--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "GitHub Emoji Commenter",
+    "name": "Emoji reactions for GitHub",
     "version": "1.1",
     "description": "Add emoji reactions to GitHub code diffs",
     "permissions": [
